# Super-RAGNotebook

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  start.py
backend/: .env.example  alembic.ini  openapi.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260618_0001_initial_enterprise_postgres.py  20260621_0002_pgvector_store.py
backend/src/: main.py  seed_templates.py
backend/src/app/: __init__.py
backend/src/app/agent/: agent.py  agent_middleware.py  agent_tools.py
backend/src/app/cache/: pg_cache_decorator.py
backend/src/app/config/: prompt.yaml  rag.yaml  uvicorn_log_config.json  vector_store.yaml
backend/src/app/core/: background_init.py  failed_response.py  failed_response_register.py  logger_handler.py  logging_filters.py  rate_limit.py  success_response.py
backend/src/app/db/: db_config.py  pg_auto_init.py  pg_runtime_store.py
backend/src/app/models/: chat_history.py  mind_map.py  note.py  note_template.py  review_record.py  runtime_state.py  study_test.py  user_model.py
backend/src/app/prompt/: main_prompt.txt  rag_summarize.txt
backend/src/app/rag/: rag_service.py  reorder_service.py  sse_models.py  task_queue.py  text_spliter.py  vector_store.py
backend/src/app/rag/document_handler/: processor.py
backend/src/app/rag/md5_manager/: __init__.py  md5_store.py
backend/src/app/rag/retrievers/: __init__.py  empty_retriever.py  hybrid_retriever.py
backend/src/app/router/: chat.py  chat_service.py  health.py  knowledge_router.py  knowledge_service.py  mindmap_router.py  note_router.py  note_template_router.py  quick_test_router.py  review_router.py  user.py
backend/src/app/schemas/: models.py  user_schemas.py
backend/src/app/services/: __init__.py  database_session_manager.py  mindmap_service.py  note_service.py  note_template_service.py  quick_test_service.py  review_service.py  source_collector.py
backend/src/app/utils/: auth_utils.py  config.py  config_handler.py  env_loader.py  factory.py  file_handler.py  image_extractor.py  magic_compat.py  path_tool.py  pdf_multimodal_loader.py  prompt_loader.py  vision_service.py
backend/test/: test_background_init_status.py  test_dashscope_embeddings.py  test_demo_dataset.py  test_enterprise_contracts.py  test_health_readiness.py
backend/test/fixtures/demo_dataset/: manifest.json
backend/test/fixtures/demo_dataset/knowledge/: learning-workflow-checklist.txt  pgvector-operations-runbook.md  ragnotebook-product-playbook.md
(+54 files in other folders)
