[project]
name = "backend"
version = "0.1.0"
description = "A FastAPI + LangChain project for LLM applications"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "RMA-MUN", email = "n3032747608@163.com" }
]
dependencies = [
    "python-dotenv~=1.2.2",
    "SQLAlchemy~=2.0.48",
    "langchain-core~=1.2.17",
    "aiofiles~=25.1.0",
    "langchain-text-splitters~=1.1.1",
    "fastapi~=0.123.0",
    "starlette~=0.50.0",
    "pydantic-settings~=2.13.1",
    "langchain-community~=0.4.1",
    "python-jose~=3.5.0",
    "PyYAML~=6.0.3",
    "pydantic[email]~=2.12.5",
    "requests~=2.32.5",
    "uvicorn==0.21.1",
    "asyncpg>=0.30.0",
    "alembic>=1.17.0",
    "langchain-ollama>=1.0.1",
    "langchain>=1.2.13",
    "python-multipart>=0.0.22",
    "dashscope>=1.25.14",
    "pypdf>=6.9.2",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14; sys_platform == 'win32' or sys_platform == 'darwin'",
    "sentence-transformers>=5.3.0",
    "modelscope>=1.35.3",
    "accelerate>=1.13.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
    "langchain-dashscope>=0.1.8",
    "unstructured[all-docs]>=0.22.20",
    "langgraph-cli[inmem]>=0.1.54",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.25.0",
    "pillow>=10.0.0",
    "passlib>=1.7.4",
    "shortuuid>=1.0.11",
    "imagehash>=4.3.0",
    "bcrypt>=4.3.0,<5.0.0",
]

# 开发依赖
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "ruff>=0.3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main", "seed_templates"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.setuptools.package-data]
app = ["config/*.yaml", "prompt/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.ruff]
target-version = "py312"
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
